test/files/neg/t0226.check
t0226.scala:5: error: not found: type A1
      (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                                                                 ^
t0226.scala:5: error: not found: type A1
      (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                             ^
t0226.scala:8: error: diverging implicit expansion for type Test.this.Foo[((List[Char], Int), (object Nil, Int))]
starting with method list2Foo in class Test
  foo(((List('b'), 3), (Nil, 4)))
     ^
three errors found
